--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
 @@include('header/header.html')
 @@include('main/main.html')
 @@include('footer/footer.html')
+@@include('modal/modal.html')
 
 
 <script src="js/app.min.js"></script>
