--- a/src/blocks/modal/modal.html
+++ b/src/blocks/modal/modal.html
@@ -116,7 +116,7 @@
 </div>
 
 
-<div class="modal modal-active modal-state">
+<div class="modal modal-state">
     <div class="modal__wrapper">
         <div class="modal-state__closer modal__closer"></div>
 
@@ -149,7 +149,9 @@
                     <div class="modal-state__notice">*скидки не суммируются</div>
                 </div>
             </div>
-            <div class="modal-state__img"></div>
+            <div class="modal-state__img">
+                <img src="img/matryoshka.png">
+            </div>
         </div>
     </div>
 </div>
