--- a/src/blocks/footer/footer.html
+++ b/src/blocks/footer/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="cont">
         <div class="footer__wrapper">
-            <div class="footer__more">
+            <div class="footer__more" data-modal="modal-info">
                 Узнать <span>подробнее</span>
             </div>
             <div class="footer__text">Не является публичной оффертой</div>
