--- a/src/blocks/header/header.html
+++ b/src/blocks/header/header.html
@@ -4,7 +4,7 @@
             <div class="header__logo">
                 <img src="../img/logo.svg">
             </div>
-            <div class="header__auth">
+            <div class="header__auth" data-modal="modal-registration">
                 <div class="auth">
                     <span class="auth__icon">
                         <svg width="31" height="30" viewBox="0 0 31 30" fill="none" xmlns="http://www.w3.org/2000/svg">
